--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         
             <nav>
                 <ul>
-                    <li> <a href="./Index.html">Home</a> </li>
+                    <li> <a href="./Index.html">Inicio</a> </li>
                     <li> <a href="./productos.html">Productos</a> </li>
                     <li> <a href="./contacto.html">Contacto</a> </li>
                 </ul>
